--- a/app/src/main/res/layout/cardview_home.xml
+++ b/app/src/main/res/layout/cardview_home.xml
@@ -7,8 +7,8 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="312dp"
-        android:layout_height="359dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
