--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- jetpack navigation 사용하기 위해서 추가 -->
+    <!-- jetpack navigation host 설정 -->
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
