--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -12,14 +12,67 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="408dp"
+            android:layout_height="252dp"
+            android:layout_marginStart="2dp"
             android:scrollbars="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="409dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:layout_marginEnd="1dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="미사용 쿠폰" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="사용 쿠폰" />
+
+        </com.google.android.material.tabs.TabLayout>
+
+        <Spinner
+            android:id="@+id/spinner_coupon"
+            android:layout_width="120dp"
+            android:layout_height="34dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.994"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+
+        <TextView
+
+            android:id="@+id/textView3"
+            android:layout_width="411dp"
+            android:layout_height="37dp"
+            android:layout_marginTop="8dp"
+
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp"
+            android:text="치킨"
+            android:textColor="#3E3E3E"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.05"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_coupon" />
+        <!-- android:background="#F4F4F4" -->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
