--- a/app/src/main/res/layout/cardview_home.xml
+++ b/app/src/main/res/layout/cardview_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/coupon_img"
+        android:id="@+id/imageview_card_img"
         android:layout_width="120dp"
         android:layout_height="130dp"
         android:layout_marginStart="16dp"
@@ -17,32 +17,32 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/coupon_menu"
+        android:id="@+id/textview_card_menu"
         android:layout_width="103dp"
         android:layout_height="29dp"
         android:autoSizeMaxTextSize="100sp"
         android:autoSizeMinTextSize="12sp"
         android:autoSizeStepGranularity="2sp"
         android:autoSizeTextType="uniform"
-        android:text="coupon_menu"
-        app:layout_constraintStart_toStartOf="@+id/coupon_img"
-        app:layout_constraintTop_toBottomOf="@+id/coupon_brand" />
+        android:text="textview_card_menu"
+        app:layout_constraintStart_toStartOf="@+id/imageview_card_img"
+        app:layout_constraintTop_toBottomOf="@+id/textview_card_brand" />
 
     <TextView
-        android:id="@+id/coupon_brand"
+        android:id="@+id/textview_card_brand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="coupon_brand"
-        app:layout_constraintStart_toStartOf="@+id/coupon_img"
-        app:layout_constraintTop_toBottomOf="@+id/coupon_img" />
+        android:text="textview_card_brand"
+        app:layout_constraintStart_toStartOf="@+id/imageview_card_img"
+        app:layout_constraintTop_toBottomOf="@+id/imageview_card_img" />
 
     <TextView
-        android:id="@+id/coupon_date"
+        android:id="@+id/textview_card_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="coupon_date"
-        app:layout_constraintStart_toStartOf="@+id/coupon_img"
-        app:layout_constraintTop_toBottomOf="@+id/coupon_menu" />
+        android:text="textview_card_date"
+        app:layout_constraintStart_toStartOf="@+id/imageview_card_img"
+        app:layout_constraintTop_toBottomOf="@+id/textview_card_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
