--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listView"
+            android:id="@+id/listview_home_coupon"
             android:layout_width="408dp"
             android:layout_height="252dp"
             android:layout_marginStart="2dp"
@@ -20,11 +20,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/textview_home_subtitle"
             app:layout_constraintVertical_bias="0.0" />
 
         <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
+            android:id="@+id/tablayout_home_isuse"
             android:layout_width="409dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="1dp"
@@ -47,17 +47,17 @@
         </com.google.android.material.tabs.TabLayout>
 
         <Spinner
-            android:id="@+id/spinner_coupon"
+            android:id="@+id/spinner_home_sort"
             android:layout_width="120dp"
             android:layout_height="34dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.994"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/tablayout_home_isuse" />
 
         <TextView
 
-            android:id="@+id/textView3"
+            android:id="@+id/textview_home_subtitle"
             android:layout_width="411dp"
             android:layout_height="37dp"
             android:layout_marginTop="8dp"
@@ -72,7 +72,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner_coupon" />
+            app:layout_constraintTop_toBottomOf="@+id/spinner_home_sort" />
         <!-- android:background="#F4F4F4" -->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
