--- a/app/src/main/res/layout/cardview_home.xml
+++ b/app/src/main/res/layout/cardview_home.xml
@@ -6,43 +6,53 @@
     android:layout_width="160dp"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/imageview_card_img"
-        android:layout_width="120dp"
-        android:layout_height="130dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="312dp"
+        android:layout_height="359dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/textview_card_menu"
-        android:layout_width="103dp"
-        android:layout_height="29dp"
-        android:autoSizeMaxTextSize="100sp"
-        android:autoSizeMinTextSize="12sp"
-        android:autoSizeStepGranularity="2sp"
-        android:autoSizeTextType="uniform"
-        android:text="textview_card_menu"
-        app:layout_constraintStart_toStartOf="@+id/imageview_card_img"
-        app:layout_constraintTop_toBottomOf="@+id/textview_card_brand" />
+        <LinearLayout
+            android:layout_width="159dp"
+            android:layout_height="230dp"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textview_card_brand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="textview_card_brand"
-        app:layout_constraintStart_toStartOf="@+id/imageview_card_img"
-        app:layout_constraintTop_toBottomOf="@+id/imageview_card_img" />
+            <ImageView
+                android:id="@+id/imageview_card_img"
+                android:layout_width="120dp"
+                android:layout_height="130dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/textview_card_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="textview_card_date"
-        app:layout_constraintStart_toStartOf="@+id/imageview_card_img"
-        app:layout_constraintTop_toBottomOf="@+id/textview_card_menu" />
+            <TextView
+                android:id="@+id/textview_card_brand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="textview_card_brand" />
+
+            <TextView
+                android:id="@+id/textview_card_menu"
+                android:layout_width="103dp"
+                android:layout_height="29dp"
+                android:layout_marginStart="16dp"
+                android:autoSizeMaxTextSize="100sp"
+                android:autoSizeMinTextSize="12sp"
+                android:autoSizeStepGranularity="2sp"
+                android:autoSizeTextType="uniform"
+                android:text="textview_card_menu" />
+
+            <TextView
+                android:id="@+id/textview_card_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="textview_card_date" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
