Add Recyclerview to HomeFrag

--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -35,7 +35,8 @@
             android:id="@+id/spinner_home_sort"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"/>
+            android:layout_gravity="right"
+            android:layout_weight="0" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_home"
