Modify Coupon View

--- a/app/src/main/res/layout/activity_coupon.xml
+++ b/app/src/main/res/layout/activity_coupon.xml
@@ -6,84 +6,184 @@
     android:layout_height="match_parent"
     tools:context=".CouponActivity">
 
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/extended_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:text="사용 완료"
+        android:textColor="#FFFFFF"
+        app:backgroundTint="@color/design_default_color_error"
+        app:icon="@drawable/outline_done_black_24"
+        app:iconTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textview_coupon_menu"
             android:layout_width="409dp"
             android:layout_height="29dp"
             android:layout_marginTop="40dp"
-            android:text="TextView" />
+            android:text="textview_coupon_menu"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageview_coupon_img"
             android:layout_width="match_parent"
             android:layout_height="273dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@tools:sample/avatars"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageview_coupon_barcode"
             android:layout_width="match_parent"
             android:layout_height="101dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@tools:sample/avatars"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="43dp"
-            android:orientation="horizontal">
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            >
 
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textview_coupon_brandlabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="브랜드"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_coupon_brand"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
+                android:text="textview_coupon_brand" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView3"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:text="TextView" />
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            >
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:text="TextView" />
+            <TextView
+                android:id="@+id/textview_coupon_datelabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="유효기간"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:text="TextView" />
+            <TextView
+                android:id="@+id/textview_coupon_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textview_coupon_date" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView10"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:text="TextView" />
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            >
 
-        <TextView
-            android:id="@+id/textView11"
+            <TextView
+                android:id="@+id/textview_coupon_categorylabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="카테고리"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_coupon_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textview_coupon_category" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:text="TextView" />
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            >
+
+            <TextView
+                android:id="@+id/textview_coupon_registerlabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="등록일"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_coupon_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textview_coupon_register" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            >
+
+            <TextView
+                android:id="@+id/textview_coupon_memolabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="메모"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_coupon_memo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textview_coupon_memo" />
+        </LinearLayout>
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
