--- a/app/src/main/res/layout/cardview_map.xml
+++ b/app/src/main/res/layout/cardview_map.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:clipToPadding="false"
+    android:padding="8dp">
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="100dp"
