--- a/app/src/main/res/layout/frag_map.xml
+++ b/app/src/main/res/layout/frag_map.xml
@@ -10,21 +10,20 @@
     <RelativeLayout
         android:id="@+id/map_view"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_weight="2"></RelativeLayout>
+        android:layout_height="400dp"></RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:scrollbars="horizontal" />
+        android:scrollbars="none"
+        android:clipToPadding="false"
+        android:overScrollMode="never"/>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="TextView"/>
 
 
