--- a/app/src/main/res/layout/frag_calendar.xml
+++ b/app/src/main/res/layout/frag_calendar.xml
@@ -26,7 +26,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_calendar_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:numColumns="2"
             android:overScrollMode="never"
             android:scrollbars="vertical"
