--- a/app/src/main/res/menu/top_main_actionbar.xml
+++ b/app/src/main/res/menu/top_main_actionbar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/menu_search"
+        android:id="@+id/button_action_search"
         android:icon="@drawable/outline_search_24"
         android:iconTint="@color/white"
         android:title="search"
