--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -20,6 +20,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_alarm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?android:attr/actionBarSize"
