Add Fab to Navigation bar

--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -13,6 +13,9 @@
         android:icon="@drawable/baseline_event_24"
         android:title="달력"/>
 
+    <item
+        android:id="@+id/placeholder"
+        android:title="" />
 
     <item
         android:id="@+id/mapFrag"
